--- a/src/main/overview.html
+++ b/src/main/overview.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="text/html; charset=utf-8"/>
     <title>Welcome file</title>
-    <link rel="stylesheet" href="https://stackedit.io/style.css"/>
+    <link rel="stylesheet" href="style.css" integrity="sha384-4bNdbyOskJgh/Rv7MV6pG3Dlfd2EI7sPBtOvLN3Wh9/ixTPwuXfizfkYukM2tyWL%" crossorigin="anonymous"/>
 </head>
 
 <body class="stackedit">
