--- a/src/main/overview.html
+++ b/src/main/overview.html
@@ -20,7 +20,7 @@
         resources to get started with our Java SDK.</p>
     <h2 id="prerequisite">Prerequisite</h2>
     <p>You will need JDK installed on your machine. You can install it from <a
-            href="http://www.oracle.com/technetwork/java/javase/downloads/jdk9-downloads-3848520.html">here</a>.</p>
+            href="https://www.oracle.com/technetwork/java/javase/downloads/jdk9-downloads-3848520.html">here</a>.</p>
     <h3 id="setup-and-installation">Setup and Installation</h3>
     <p>To use the Contentstack Java SDK to your existing project, perform the steps given below:</p>
     <p>Group id: <code>com.contentstack.sdk</code></p>
